@@ -34,6 +34,7 @@ class WatchedItemStore implements WatchedItemStoreInterface, StatsdAwareInterfac
 		'UpdateRowsPerQuery',
 		'WatchlistExpiry',
 		'WatchlistExpiryMaxDuration',
+		'WatchlistPurgeRate',
 	];
 
 	/**
@@ -131,6 +132,9 @@ class WatchedItemStore implements WatchedItemStoreInterface, StatsdAwareInterfac
 	 */
 	private $maxExpiryDuration;
 
+	/** @var float corresponds to $wgWatchlistPurgeRate value */
+	private $watchlistPurgeRate;
+
 	/**
 	 * @param ServiceOptions $options
 	 * @param ILBFactory $lbFactory
@@ -163,6 +167,7 @@ class WatchedItemStore implements WatchedItemStoreInterface, StatsdAwareInterfac
 		$this->updateRowsPerQuery = $options->get( 'UpdateRowsPerQuery' );
 		$this->expiryEnabled = $options->get( 'WatchlistExpiry' );
 		$this->maxExpiryDuration = $options->get( 'WatchlistExpiryMaxDuration' );
+		$this->watchlistPurgeRate = $options->get( 'WatchlistPurgeRate' );
 
 		$this->lbFactory = $lbFactory;
 		$this->loadBalancer = $lbFactory->getMainLB();
@@ -379,8 +384,27 @@ class WatchedItemStore implements WatchedItemStoreInterface, StatsdAwareInterfac
 	 * @inheritDoc
 	 */
 	public function enqueueWatchlistExpiryJob( float $watchlistPurgeRate ): void {
+		wfDeprecated( __METHOD__, '1.36' );
 		$max = mt_getrandmax();
 		if ( mt_rand( 0, $max ) < $max * $watchlistPurgeRate ) {
+			// The higher the watchlist purge rate, the more likely we are to enqueue a job.
+			$this->queueGroup->push( new WatchlistExpiryJob() );
+		}
+	}
+
+	/**
+	 * @inheritDoc
+	 */
+	public function maybeEnqueueWatchlistExpiryJob(): void {
+		if ( !$this->expiryEnabled ) {
+			// No need to purge expired entries if there are none
+			return;
+		}
+
+		// Yes, we duplicate some of the logic from enqueueWatchlistExpiryJob, but we can't
+		// just call that because its hard deprecated
+		$max = mt_getrandmax();
+		if ( mt_rand( 0, $max ) < $max * $this->watchlistPurgeRate ) {
 			// The higher the watchlist purge rate, the more likely we are to enqueue a job.
 			$this->queueGroup->push( new WatchlistExpiryJob() );
 		}
